@@ -274,8 +274,7 @@ void MeterEvo868::processContent(Telegram *t)
     extractDVuint32(&t->values, "04FD17", &offset, &error_flags_);
     t->addMoreExplanation(offset, " error flags (%s)", status().c_str());
 
-    extractDVstring(&t->values, "0E78", &offset, &fabrication_no_);
-    reverse(fabrication_no_.begin(), fabrication_no_.end());
+    extractDVReadableString(&t->values, "0E78", &offset, &fabrication_no_);
     t->addMoreExplanation(offset, " fabrication no (%s)", fabrication_no_.c_str());
 
     if(findKey(MeasurementType::Instantaneous, ValueInformation::Volume, 1, 0, &key, &t->values)) {
