@@ -217,7 +217,7 @@ void MeterUnismart::processContent(Telegram *t)
     }
 
     string tmp;
-    if (extractDVstring(&t->values, "0DFD0C", &offset, &tmp))
+    if (extractDVHexString(&t->values, "0DFD0C", &offset, &tmp))
     {
         vector<uchar> bin;
         hex2bin(tmp, &bin);
@@ -233,17 +233,17 @@ void MeterUnismart::processContent(Telegram *t)
         t->addMoreExplanation(offset, " device datetime (%s)", device_date_time_.c_str());
     }
 
-    if (extractDVstring(&t->values, "01FD67", &offset, &supplier_info_))
+    if (extractDVHexString(&t->values, "01FD67", &offset, &supplier_info_))
     {
         t->addMoreExplanation(offset, " suppler info (%s)", supplier_info_.c_str());
     }
 
-    if (extractDVstring(&t->values, "02FD74", &offset, &status_))
+    if (extractDVHexString(&t->values, "02FD74", &offset, &status_))
     {
         t->addMoreExplanation(offset, " status (%s)", status_.c_str());
     }
 
-    if (extractDVstring(&t->values, "01FD0B", &offset, &parameter_set_))
+    if (extractDVHexString(&t->values, "01FD0B", &offset, &parameter_set_))
     {
         t->addMoreExplanation(offset, " parameter set (%s)", parameter_set_.c_str());
     }
